<resources>
    <string name="app_name">socialdeliverysystem</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>
    <string name="enter_your_email">Enter Youe Email</string>
    <string name="enter_your_password">Enter Your Password</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="enter_your_id_number">Enter Your ID Number</string>
    <string name="enter_your_address">Enter Your Address</string>
    <string name="log_in">Log In</string>
    <string name="sign_in">Sign In</string>
    <string name="get_code_in_sms">Get Code In Sms</string>
    <string name="don_t_have_an_account_sign_in">Don\'t have an account? sign in</string>
    <string name="enter_your_phone_number">Enter Your Phone Number</string>
    <string name="enter_code_from_sms">Enter Code From Sms</string>
    <string name="switch_to_password_entry">Switch To Password Entry</string>
    <string name="go_back">Go Back</string>
    <string name="registered_parcels">Registered Parcels</string>
    <string name="friends_parcels">Friends Parcels</string>
    <string name="history_parcels">History Parcels</string>
    <string name="log_out">Log Out</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account? sign up</string>
    <string name="click_to_sign_up">Click To Sign Up</string>
    <string name="social_delivery">Social Delivery</string>
</resources>
