<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_registered_parcels">

    <fragment
        android:id="@+id/nav_registered_parcels"
        android:name="com.example.socialdeliverysystem.ui.userParcels.RegisteredParcelsFragment"
        android:label="@string/registered_parcels"
        tools:layout="@layout/fragment_home"/>

    <fragment
        android:id="@+id/nav_friends_parcels"
        android:name="com.example.socialdeliverysystem.ui.friendsParcels.FriendsParcelsFragment"
        android:label="@string/friends_parcels"
        tools:layout="@layout/fragment_friends_parcels" />

    <fragment
        android:id="@+id/nav_parcels_history"
        android:name="com.example.socialdeliverysystem.ui.parcelsHistory.ParcelsHistoryFragment"
        android:label="@string/history_parcels"
        tools:layout="@layout/fragment_parcels_history" />
</navigation>