<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.SignUpActivity"
    android:background="@drawable/delivery"
    >

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/sign_up_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/sign_up_input_first_name"
                style="@style/myTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="8dp"
                android:layout_weight="50"
                android:background="@drawable/rounded_corner"
                app:boxBackgroundMode="outline"
                app:errorEnabled="true"
                android:textColorHint="@color/colorYellow">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/first_name"
                    android:inputType="text"
                    android:textColor="#FFFFFF" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/sign_up_input_last_name"
                style="@style/myTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="8dp"
                android:layout_weight="50"
                android:background="@drawable/rounded_corner"
                app:boxBackgroundMode="outline"
                app:errorEnabled="true"
                android:textColorHint="@color/colorYellow">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/last_name"
                    android:inputType="text"
                    android:textColor="#FFFFFF" />

            </com.google.android.material.textfield.TextInputLayout>
        </androidx.appcompat.widget.LinearLayoutCompat>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/sign_up_input_email"
            style="@style/myTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/rounded_corner"
            app:boxBackgroundMode="outline"
            app:errorEnabled="true"
            android:textColorHint="@color/colorYellow">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_your_email"
                android:inputType="textEmailAddress"
                android:textColor="#FFFFFF" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/sign_up_input_phone"
            style="@style/myTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/rounded_corner"
            app:boxBackgroundMode="outline"
            app:counterEnabled="true"
            app:counterMaxLength="10"
            app:errorEnabled="true"
            android:textColorHint="@color/colorYellow">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_your_phone_number"
                android:inputType="phone"
                android:maxLength="10"
                android:textColor="#FFFFFF" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/sign_up_input_id"
            style="@style/myTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/rounded_corner"
            app:boxBackgroundMode="outline"
            app:counterEnabled="true"
            app:counterMaxLength="9"
            app:errorEnabled="true"
            android:textColorHint="@color/colorYellow">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_your_id_number"
                android:inputType="phone"
                android:maxLength="9"
                android:textColor="#FFFFFF" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/sign_up_input_address"
            style="@style/myTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/rounded_corner"
            app:boxBackgroundMode="outline"
            app:errorEnabled="true"
            android:textColorHint="@color/colorYellow">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_your_address"
                android:inputType="text"
                android:textColor="#FFFFFF" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/sign_up_input_password"
            style="@style/myTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="4dp"
            android:background="@drawable/rounded_corner"
            app:boxBackgroundMode="outline"
            app:errorEnabled="true"
            app:passwordToggleEnabled="true"
            android:textColorHint="@color/colorYellow">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_your_password"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@android:color/black" />
        <Button
            android:id="@+id/sign_up"
            android:onClick="SignUpOnClick"
            android:text="Sign Up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:background="@drawable/button_style"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="4dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="4dp"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@android:color/black" />
        <Button
            android:id="@+id/Log_in"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:background="@drawable/button_style"
            android:onClick="logInOnClick"
            android:text="@string/go_back"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="4dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="0dp"/>
    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.appcompat.widget.LinearLayoutCompat>