<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".ui.LoginActivity"
    android:gravity="center"
    android:background="@drawable/delivery">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/login_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="Social Delivery\nWELCOME"
            android:textColorLink="#009688"
            android:textSize="30sp"
            android:textStyle="bold|italic" />
        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/email_or_phone_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/login_input_phone_mail"
                style="@style/myTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                app:boxBackgroundMode="outline"
                app:errorEnabled="true"
                android:padding="15dp"
                android:background="@drawable/rounded_corner"
                android:textColorHint="@color/colorYellow">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Enter E-Mail or Phone Number"
                    android:inputType="text"
                    android:textColor="#FFFFFF" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/OpenTextBoxForCodeOrPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_gravity="center"
                android:background="@drawable/button_style"
                android:onClick="OpenTextBoxForCodeOrPassword"
                android:text="Next" />
        </androidx.appcompat.widget.LinearLayoutCompat>
        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/password_code_entry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">
            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/password_entry"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone">
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/login_input_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:passwordToggleEnabled="true"
                style="@style/myTextView"
                android:layout_margin="16dp"
                app:boxBackgroundMode="outline"
                app:errorEnabled="true"
                android:padding="15dp"
                android:background="@drawable/rounded_corner"
                android:textColorHint="@color/colorYellow">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_your_password"
                    android:inputType="textPassword"
                    android:textColor="@color/colorWhite"/>

            </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/reset_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="resetPasswordOnClick"
                    android:text="Forgot Password? Click To Reset"
                    android:layout_gravity="center"
                    android:clickable="true"
                    android:contextClickable="false"
                    android:gravity="center"
                    android:hint="@string/click_to_sign_up"
                    android:padding="16dp"
                    android:textAllCaps="false"
                    android:textColor="@color/colorAccent"
                    android:textStyle="bold"
                    style="@style/myTextView"
                    android:background="@drawable/rounded_corner"/>
            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/code_entry"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone">
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/login_input_sms"
                style="@style/myTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                app:boxBackgroundMode="outline"
                app:errorEnabled="true"
                android:padding="15dp"
                android:background="@drawable/rounded_corner"
                android:textColorHint="@color/colorYellow">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_code_from_sms"
                    android:inputType="number"
                    android:textColor="@color/colorWhite"/>

            </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/try_email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:clickable="true"
                    android:contextClickable="false"
                    android:onClick="GoBackOnClick"
                    android:text="Didn't Receive a Code? Try Email Verify"
                    android:gravity="center"
                    android:hint="@string/click_to_sign_up"
                    android:padding="16dp"
                    android:textAllCaps="false"
                    android:textColor="@color/colorAccent"
                    android:textStyle="bold"
                    style="@style/myTextView"
                    android:background="@drawable/rounded_corner"/>
            </androidx.appcompat.widget.LinearLayoutCompat>

            <Button
                android:id="@+id/log_in_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="logInOnClick"
                android:text="@string/log_in"
                android:layout_centerInParent="true"
                android:background="@drawable/button_style"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="8dp"/>

            <Button
                android:id="@+id/go_back"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="GoBackOnClick"
                android:text="@string/go_back"
                android:layout_centerInParent="true"
                android:background="@drawable/button_style"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="8dp"/>

        </androidx.appcompat.widget.LinearLayoutCompat>

        <TextView
            android:id="@+id/signInText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/don_t_have_an_account_sign_up"
            android:layout_gravity="center"
            android:clickable="true"
            android:contextClickable="false"
            android:gravity="center"
            android:hint="@string/click_to_sign_up"
            android:onClick="SignUpOnClick"
            android:padding="16dp"
            android:textAllCaps="false"
            android:textColor="@color/colorAccent"
            android:textStyle="bold"
            style="@style/myTextView"
            android:background="@drawable/rounded_corner"/>
    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.appcompat.widget.LinearLayoutCompat>